openshift-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    namespace: my-namespace
    app: myapp
