openshift-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-service
spec:
  selector:
    app: myapp  # This should match the label in the Pod metadata
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
